# config

./: .gitconfig  .gitignore  .tmux.conf  .zshrc  Brewfile
.config/: .gitignore
.config/nvim/: init.vim  pyproject.toml
.config/tmux-powerline/: config.sh
.config/tmux-powerline/segments/: utc_timestamp.sh
